--- a/ajuda.html
+++ b/ajuda.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ajuda</title>
+  <title>Ajuda (FAQs)</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -21,10 +21,11 @@
             <li><a class="dropdown-item" href="riodejaneiro.html">Rio de Janeiro</a></li>
             <li><a class="dropdown-item" href="amesterdao.html">Amesterdão</a></li>
             <li><a class="dropdown-item" href="roma.html">Roma</a></li>
+            <li><a class="dropdown-item" href="londres.html">Londres</a></li>
           </ul>
         </div>
-        <div class="nav-underline mx-3 collapse navbar-collapse" id="navbarTogglerDemo01"><a class="nav-link nav link-secondary" href="planos.html">Planos</a></div>
-        <div class="nav-underline collapse navbar-collapse" id="navbarTogglerDemo01"><a class="nav-link nav link-secondary" href="ajuda.html">Ajuda</a></div>
+        <div class="nav-underline mx-3 collapse navbar-collapse" id="navbarTogglerDemo01"><a class="nav-link nav link-secondary" href="planos.html">Parceiros</a></div>
+        <div class="nav-underline collapse navbar-collapse" id="navbarTogglerDemo01"><a class="nav-link nav link-secondary" href="ajuda.html">Ajuda (FAQs)</a></div>
         <div class="nav-underline mx-3 collapse navbar-collapse" id="navbarTogglerDemo01"><a class="nav-link nav link-secondary" href="contactos.html">Contate-nos</a></div>
         <div class="d-flex">
           <form class="d-flex d-none d-md-flex" role="search">
