--- a/contactos.html
+++ b/contactos.html
@@ -21,10 +21,11 @@
             <li><a class="dropdown-item" href="riodejaneiro.html">Rio de Janeiro</a></li>
             <li><a class="dropdown-item" href="amesterdao.html">Amesterdão</a></li>
             <li><a class="dropdown-item" href="roma.html">Roma</a></li>
+            <li><a class="dropdown-item" href="londres.html">Londres</a></li>
           </ul>
         </div>
-        <div class="nav-underline mx-3 collapse navbar-collapse" id="navbarTogglerDemo01"><a class="nav-link nav link-secondary" href="planos.html">Planos</a></div>
-        <div class="nav-underline collapse navbar-collapse" id="navbarTogglerDemo01"><a class="nav-link nav link-secondary" href="ajuda.html">Ajuda</a></div>
+        <div class="nav-underline mx-3 collapse navbar-collapse" id="navbarTogglerDemo01"><a class="nav-link nav link-secondary" href="planos.html">Parceiros</a></div>
+        <div class="nav-underline collapse navbar-collapse" id="navbarTogglerDemo01"><a class="nav-link nav link-secondary" href="ajuda.html">Ajuda (FAQs)</a></div>
         <div class="nav-underline mx-3 collapse navbar-collapse" id="navbarTogglerDemo01"><a class="nav-link nav link-secondary" href="contactos.html">Contate-nos</a></div>
         <div class="d-flex">
           <form class="d-flex d-none d-md-flex" role="search">
