--- a/riodejaneiro.html
+++ b/riodejaneiro.html
@@ -27,8 +27,8 @@
             <li><a class="dropdown-item" href="roma.html">Roma</a></li>
           </ul>
         </div>
-        <div class="nav-underline mx-3 collapse navbar-collapse" id="navbarTogglerDemo01"><a class="nav-link nav link-secondary" href="planos.html">Planos</a></div>
-        <div class="nav-underline collapse navbar-collapse" id="navbarTogglerDemo01"><a class="nav-link nav link-secondary" href="ajuda.html">Ajuda</a></div>
+        <div class="nav-underline mx-3 collapse navbar-collapse" id="navbarTogglerDemo01"><a class="nav-link nav link-secondary" href="planos.html">Parceiros</a></div>
+        <div class="nav-underline collapse navbar-collapse" id="navbarTogglerDemo01"><a class="nav-link nav link-secondary" href="ajuda.html">Ajuda (FAQs)</a></div>
         <div class="nav-underline mx-3 collapse navbar-collapse" id="navbarTogglerDemo01"><a class="nav-link nav link-secondary" href="contactos.html">Contate-nos</a></div>
         <div class="d-flex">
           <form class="d-flex d-none d-md-flex" role="search">
@@ -71,7 +71,7 @@
           </button>
         </div>
         <div class="col-lg-6 col-sm-12">
-          <p class="text-justify fs-5">O Rio de Janeiro, conhecida como "Cidade Maravilhosa", é famosa pelas suas deslumbrantes praias, montanhas icónicas como o Pão de Açúcar e o Cristo Redentor, e um vibrante ambiente cultural. A cidade oferece uma mistura única de natureza, história e vida urbana, com o famoso Carnaval, a deliciosa culinária carioca e uma rica herança cultural. Os visitantes podem desfrutar de passeios pelo calçadão de Copacabana, explorar o Jardim Botânico e viver a energia contagiante das favelas.</p>
+          <p class="text-justify fs-5">Rio de Janeiro, conhecida como "Cidade Maravilhosa", é famosa pelas suas deslumbrantes praias, montanhas icónicas como o Pão de Açúcar e o Cristo Redentor, e um vibrante ambiente cultural. A cidade oferece uma mistura única de natureza, história e vida urbana, com o famoso Carnaval, a deliciosa culinária carioca e uma rica herança cultural. Os visitantes podem desfrutar de passeios pelo calçadão de Copacabana, explorar o Jardim Botânico e viver a energia contagiante das favelas.</p>
           <div class="accordion custom-accordion" id="accordionExample">
             <div class="accordion-item">
               <h2 class="accordion-header">
@@ -128,19 +128,19 @@
         <div class="col-md-6">
           <h5 class="footer-title">SIGA-NOS EM</h5>
           <div class="social-icons">
-            <a href="#"><i class="fab fa-instagram"> <img class="icon-footer" src="img/facebook.png" alt="icone facebook"></i></a>
-            <a href="#"><i class="fab fa-instagram"> <img class="icon-footer" src="img/instagram.png" alt="icone instagram"></i></a>
+            <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-instagram"> <img class="icon-footer" src="img/facebook.png" alt="icone facebook"></i></a>
+            <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"> <img class="icon-footer" src="img/instagram.png" alt="icone instagram"></i></a>
           </div>
         </div>
 
         <div class="col-md-6">
-          <h5 class="footer-title">SOBRE A DREAM TRIP PROJECT</h5>
+          <h5 class="footer-title">SOBRE A DREAM TRIP</h5>
           <ul class="list-unstyled">
             <li><a href="#">Hotéis parceiros</a></li>
             <li><a href="#">Companhias Aéreas parceiras</a></li>
             <li><a href="#">Opiniões</a></li>
             <li><a href="#">Contate-nos</a></li>
-            <li><a href="#">Ajuda (FAQs)</a></li>
+            <li><a href="ajuda.html">Ajuda (FAQs)</a></li>
             <li><a href="#">Termos e condições</a></li>
             <li><a href="#">Política de Privacidade</a></li>
           </ul>
@@ -150,7 +150,7 @@
       <div class="footer-bottom mt-4">
         <div class="row align-items-center">
           <div class="col-12 text-center">
-            <p>&copy; 2024 Dream Trip Project All rights reserved</p>
+            <p>&copy; 2024 Dream Trip All rights reserved</p>
             <p>Lisboa, Portugal</p>
           </div>
         </div>
