--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
             <li><a class="dropdown-item" href="roma.html">Roma</a></li>
           </ul>
         </div>
-        <div class="nav-underline mx-3 collapse navbar-collapse" id="navbarTogglerDemo01"><a class="nav-link nav link-secondary" href="planos.html">Planos</a></div>
-        <div class="nav-underline collapse navbar-collapse" id="navbarTogglerDemo01"><a class="nav-link nav link-secondary" href="ajuda.html">Ajuda</a></div>
+        <div class="nav-underline mx-3 collapse navbar-collapse" id="navbarTogglerDemo01"><a class="nav-link nav link-secondary" href="planos.html">Parceiros</a></div>
+        <div class="nav-underline collapse navbar-collapse" id="navbarTogglerDemo01"><a class="nav-link nav link-secondary" href="ajuda.html">Ajuda (FAQs)</a></div>
         <div class="nav-underline mx-3 collapse navbar-collapse" id="navbarTogglerDemo01"><a class="nav-link nav link-secondary" href="contactos.html">Contate-nos</a></div>
         <div class="d-flex">
           <form class="d-flex d-none d-md-flex" role="search">
@@ -98,7 +98,7 @@
             <img src="img/RioDeJaneiro (2).jpg" class="card-img-top" alt="...">
             <div class="card-body d-flex flex-column">
               <h5 class="card-title">Rio de Janeiro</h5>
-              <p class="card-text flex-grow-1">O Rio de Janeiro, famoso pelo Cristo Redentor e praias icónicas, é uma cidade vibrante e cheia de paisagens naturais deslumbrantes.</p>
+              <p class="card-text flex-grow-1">Rio de Janeiro, famoso pelo Cristo Redentor e praias icónicas, é uma cidade vibrante e cheia de paisagens naturais deslumbrantes.</p>
               <p class="fw-bold">A partir de 699€</p>
               <a href="riodejaneiro.html" class="btn btn-cards mt-2">Mais informações</a>
             </div>
@@ -159,19 +159,19 @@
         <div class="col-md-6">
           <h5 class="footer-title">SIGA-NOS EM</h5>
           <div class="social-icons">
-            <a href="#"><i class="fab fa-instagram"> <img class="icon-footer" src="img/facebook.png" alt="icone facebook"></i></a>
-            <a href="#"><i class="fab fa-instagram"> <img class="icon-footer" src="img/instagram.png" alt="icone instagram"></i></a>
+            <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-instagram"> <img class="icon-footer" src="img/facebook.png" alt="icone facebook"></i></a>
+            <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"> <img class="icon-footer" src="img/instagram.png" alt="icone instagram"></i></a>
           </div>
         </div>
 
         <div class="col-md-6">
-          <h5 class="footer-title">SOBRE A DREAM TRIP PROJECT</h5>
+          <h5 class="footer-title">SOBRE A DREAM TRIP</h5>
           <ul class="list-unstyled">
             <li><a href="#">Hotéis parceiros</a></li>
             <li><a href="#">Companhias Aéreas parceiras</a></li>
             <li><a href="#">Opiniões</a></li>
             <li><a href="#">Contate-nos</a></li>
-            <li><a href="#">Ajuda (FAQs)</a></li>
+            <li><a href="ajuda.html">Ajuda (FAQs)</a></li>
             <li><a href="#">Termos e condições</a></li>
             <li><a href="#">Política de Privacidade</a></li>
           </ul>
@@ -181,7 +181,7 @@
       <div class="footer-bottom mt-4">
         <div class="row align-items-center">
           <div class="col-12 text-center">
-            <p>&copy; 2024 Dream Trip Project All rights reserved</p>
+            <p>&copy; 2024 Dream Trip All rights reserved</p>
             <p>Lisboa, Portugal</p>
           </div>
         </div>
