--- a/londres.html
+++ b/londres.html
@@ -122,6 +122,44 @@
           </div>
         </div>
       </div>
+      <h2 class="display-7 title-c2 text-center font-title pt-4">Próximas viagens</h2>
+      <p class="title-c2 text-center font-title fs-6">Datas disponíveis</p>
+      <table class="table table-hover table-responsive-md">
+        <thead>
+          <tr>
+            <th scope="col">Datas</th>
+            <th scope="col">Partida</th>
+            <th scope="col">Destino</th>
+            <th scope="col">Reservas</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row">30 de Novembro</th>
+            <td>Lisboa</td>
+            <td>Londres</td>
+            <td><a href="#" class="btn btn-outline-secondary btn-sm">Efetuar reserva</a></td>
+          </tr>
+          <tr>
+            <th scope="row">06 de Dezembro</th>
+            <td>Lisboa</td>
+            <td>Londres</td>
+            <td><a href="#" class="btn btn-outline-secondary btn-sm">Efetuar reserva</a></td>
+          </tr>
+          <tr>
+            <th scope="row">29 de Dezembro</th>
+            <td>Porto</td>
+            <td>Londres</td>
+            <td><a href="#" class="btn btn-outline-secondary btn-sm">Efetuar reserva</a></td>
+          </tr>
+          <tr>
+            <th scope="row">15 de Fevereiro</th>
+            <td>Porto</td>
+            <td>Londres</td>
+            <td><a href="#" class="btn btn-outline-secondary btn-sm">Efetuar reserva</a></td>
+          </tr>
+        </tbody>
+      </table>
     </div>
   </section>
   <footer class="footer">
