--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Anton&family=DM+Serif+Text:ital@0;1&family=Great+Vibes&family=IBM+Plex+Mono:wght@400;600&family=Lora:ital,wght@0,400..700;1,400..700&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Oswald:wght@200..700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="modal_style.css">
-
+  <script src="script.js"></script>
 </head>
 <body>
   <nav class="navbar navbar-expand-md bg-body-tertiary fixed-top box-shadow">
@@ -49,7 +49,8 @@
       </div>
     </div>
   </nav>
-
+  
+      <!--BANNER-->
   <div class="banner">
     <p><span> Promoção BlackFriday: ATÉ 50% DE DESCONTO NO SEGUNDO PACOTE DE VIAGEM ADQUIRIDO</span></p>
   </div>
@@ -59,32 +60,32 @@
         <div class="modal-dialog">
           <div class="modal-content"> 
             <div class="modal-header">
-              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              <button type="button" id="button-close" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
               <h2 class="modal-title w-100 text-center display-4 title-c2 d-block" id="exampleModalLabel">Entre em contacto connosco!</h2>
               <p class="text-center">Por favor, preencha o formulário abaixo para que lhe possamos ajudar.</p>
               <form>
                 <div class="mb-3">
-                  <label for="recipient-name" class="col-form-label" required>Primeiro Nome:</label>
+                  <label for="modal-firstname" class="col-form-label" required>Primeiro Nome:</label>
                   <input type="text" class="form-control" id="text-name" required>
                 </div>
                 <div class="mb-3">
-                  <label for="recipient-name" class="col-form-label">Último Nome:</label>
-                  <input type="text" class="form-control" id="text-name">
+                  <label for="modal-lastname" class="col-form-label" required>Último Nome:</label>
+                  <input type="text" class="form-control" id="text-name" required>
                 </div>
                 <div class="mb-3">
-                  <label for="recipient-name" class="col-form-label">Email:</label>
-                  <input type="email" class="form-control" id="recipient-name">
+                  <label for="modal-email" class="col-form-label" required>Email:</label>
+                  <input type="email" class="form-control" id="recipient-name" required>
                 </div>
                 <div class="mb-3">
-                  <label for="message-text" class="col-form-label">Mensagem:</label>
+                  <label for="message-message" class="col-form-label" aria-placeholder="Escreva qual o seu problema ou sugestão">Mensagem:</label>
                   <textarea class="form-control" id="message-text"></textarea>
                 </div>
               </form>
             </div>
             <div class="modal-footer"> 
-              <button type="submit" id="btn-submit" class="btn btn-primary btn-lg btn-block" data-bs-dismiss="modal">Submit</button>
+              <button type="submit" id="btn-submit" class="btn btn-primary btn-lg btn-block">Submit</button>
             </div>
           </div>
         </div>
