--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
   <title>Dream trip project</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+  <!--fONTE-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Anton&family=DM+Serif+Text:ital@0;1&family=Great+Vibes&family=IBM+Plex+Mono:wght@400;600&family=Lora:ital,wght@0,400..700;1,400..700&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Oswald:wght@200..700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Anton&family=DM+Serif+Text:ital@0;1&family=Great+Vibes&family=IBM+Plex+Mono:wght@400;600&family=Lora:ital,wght@0,400..700;1,400..700&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Oswald:wght@200..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
   <nav class="navbar navbar-expand-md bg-body-tertiary fixed-top box-shadow">
@@ -40,7 +41,7 @@
     </div>
   </nav>
   <div class="banner">
-    <p><span> Promoção BlackFriday: ATÉ 50% DE DESCONTO NO SEGUNDO PACOTE DE VIAGEM ADQUIRIDO</span></p>
+    <h5>BlackFriday: ATÉ 50% DE DESCONTO NO SEGUNDO PACOTE DE VIAGEM</h5>
   </div>
   <section class="container-fluid">
     <div class="row">
