--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <li><a class="dropdown-item" href="riodejaneiro.html">Rio de Janeiro</a></li>
             <li><a class="dropdown-item" href="amesterdao.html">Amesterdão</a></li>
             <li><a class="dropdown-item" href="roma.html">Roma</a></li>
+            <li><a class="dropdown-item" href="londres.html">Londres</a></li>
           </ul>
         </div>
         <div class="nav-underline mx-3 collapse navbar-collapse" id="navbarTogglerDemo01"><a class="nav-link nav link-secondary" href="planos.html">Parceiros</a></div>
@@ -97,7 +98,6 @@
             </div>
           </div>
         </div>
-        
         <div class="col-lg-3 col-sm-12">
           <div class="card h-100 d-flex flex-column text-center">
             <img src="img/RioDeJaneiro (2).jpg" class="card-img-top" alt="Fotografia da cidade do Rio de Janeiro">
@@ -172,13 +172,13 @@
         <div class="col-md-6">
           <h5 class="footer-title">SOBRE A DREAM TRIP</h5>
           <ul class="list-unstyled">
-            <li><a href="#">Hotéis parceiros</a></li>
-            <li><a href="#">Companhias Aéreas parceiras</a></li>
+            <li><a href="planos.html">Hotéis parceiros</a></li>
+            <li><a href="planos.html">Companhias Aéreas parceiras</a></li>
             <li><a href="#">Opiniões</a></li>
             <li><a href="#">Contate-nos</a></li>
             <li><a href="ajuda.html">Ajuda (FAQs)</a></li>
-            <li><a href="#">Termos e condições</a></li>
-            <li><a href="#">Política de Privacidade</a></li>
+            <li><a href="termosCondicoes.html">Termos e condições</a></li>
+            <li><a href="politicaPrivacidade.html">Política de Privacidade</a></li>
           </ul>
         </div>
       </div>
