--- a/londres.html
+++ b/londres.html
@@ -130,21 +130,21 @@
         <div class="col-md-6">
           <h5 class="footer-title">SIGA-NOS EM</h5>
           <div class="social-icons">
-            <a href="#"><i class="fab fa-instagram"> <img class="icon-footer" src="img/facebook.png" alt="icone facebook"></i></a>
-            <a href="#"><i class="fab fa-instagram"> <img class="icon-footer" src="img/instagram.png" alt="icone instagram"></i></a>
+            <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-instagram"> <img class="icon-footer" src="img/facebook.png" alt="icone facebook"></i></a>
+            <a href="https://www.instagram.com/"><i class="fab fa-instagram"> <img class="icon-footer" src="img/instagram.png" alt="icone instagram"></i></a>
           </div>
         </div>
 
         <div class="col-md-6">
-          <h5 class="footer-title">SOBRE A DREAM TRIP PROJECT</h5>
+          <h5 class="footer-title">SOBRE A DREAM TRIP</h5>
           <ul class="list-unstyled">
-            <li><a href="#">Hotéis parceiros</a></li>
-            <li><a href="#">Companhias Aéreas parceiras</a></li>
+            <li><a href="planos.html">Hotéis parceiros</a></li>
+            <li><a href="planos.html">Companhias Aéreas parceiras</a></li>
             <li><a href="#">Opiniões</a></li>
             <li><a href="#">Contate-nos</a></li>
-            <li><a href="#">Ajuda (FAQs)</a></li>
-            <li><a href="#">Termos e condições</a></li>
-            <li><a href="#">Política de Privacidade</a></li>
+            <li><a href="ajuda.html">Ajuda (FAQs)</a></li>
+            <li><a href="termosCondicoes.html">Termos e condições</a></li>
+            <li><a href="politicaPrivacidade.html">Política de Privacidade</a></li>
           </ul>
         </div>
       </div>
@@ -152,7 +152,7 @@
       <div class="footer-bottom mt-4">
         <div class="row align-items-center">
           <div class="col-12 text-center">
-            <p>&copy; 2024 Dream Trip Project All rights reserved</p>
+            <p>&copy; 2024 Dream Trip All rights reserved</p>
             <p>Lisboa, Portugal</p>
           </div>
         </div>
