--- a/riodejaneiro.html
+++ b/riodejaneiro.html
@@ -140,13 +140,13 @@
         <div class="col-md-6">
           <h5 class="footer-title">SOBRE A DREAM TRIP</h5>
           <ul class="list-unstyled">
-            <li><a href="#">Hotéis parceiros</a></li>
-            <li><a href="#">Companhias Aéreas parceiras</a></li>
+            <li><a href="planos.html">Hotéis parceiros</a></li>
+            <li><a href="planos.html">Companhias Aéreas parceiras</a></li>
             <li><a href="#">Opiniões</a></li>
             <li><a href="#">Contate-nos</a></li>
             <li><a href="ajuda.html">Ajuda (FAQs)</a></li>
-            <li><a href="#">Termos e condições</a></li>
-            <li><a href="#">Política de Privacidade</a></li>
+            <li><a href="termosCondicoes.html">Termos e condições</a></li>
+            <li><a href="politicaPrivacidade.html">Política de Privacidade</a></li>
           </ul>
         </div>
       </div>
