--- a/ajuda.html
+++ b/ajuda.html
@@ -29,7 +29,7 @@
             <li><a class="dropdown-item" href="londres.html">Londres</a></li>
           </ul>
         </div>
-        <div class="nav-underline mx-3 collapse navbar-collapse" id="navbarTogglerDemo01"><a class="nav-link nav link-secondary" href="planos.html">Parceiros</a></div>
+        <div class="nav-underline mx-3 collapse navbar-collapse" id="navbarTogglerDemo01"><a class="nav-link nav link-secondary" href="parceiros.html">Parceiros</a></div>
         <div class="nav-underline collapse navbar-collapse" id="navbarTogglerDemo01"><a class="nav-link nav link-secondary" href="ajuda.html">Ajuda (FAQs)</a></div>
         <div class="nav-underline mx-3 collapse navbar-collapse" id="navbarTogglerDemo01"><a class="nav-link nav link-secondary" href="contactos.html">Contate-nos</a></div>
         <div class="d-flex">
@@ -212,8 +212,8 @@
         <div class="col-md-6">
           <h5 class="footer-title">SOBRE A DREAM TRIP</h5>
           <ul class="list-unstyled">
-            <li><a href="#">Hotéis parceiros</a></li>
-            <li><a href="#">Companhias Aéreas parceiras</a></li>
+            <li><a href="parceiros.html">Hotéis parceiros</a></li>
+            <li><a href="parceiros.html">Companhias Aéreas parceiras</a></li>
             <li><a href="#">Opiniões</a></li>
             <li><a href="#">Contate-nos</a></li>
             <li><a href="ajuda.html">Ajuda (FAQs)</a></li>
