--- a/contactos.html
+++ b/contactos.html
@@ -24,7 +24,7 @@
             <li><a class="dropdown-item" href="londres.html">Londres</a></li>
           </ul>
         </div>
-        <div class="nav-underline mx-3 collapse navbar-collapse" id="navbarTogglerDemo01"><a class="nav-link nav link-secondary" href="planos.html">Parceiros</a></div>
+        <div class="nav-underline mx-3 collapse navbar-collapse" id="navbarTogglerDemo01"><a class="nav-link nav link-secondary" href="parceiros.html">Parceiros</a></div>
         <div class="nav-underline collapse navbar-collapse" id="navbarTogglerDemo01"><a class="nav-link nav link-secondary" href="ajuda.html">Ajuda (FAQs)</a></div>
         <div class="nav-underline mx-3 collapse navbar-collapse" id="navbarTogglerDemo01"><a class="nav-link nav link-secondary" href="contactos.html">Contate-nos</a></div>
         <div class="d-flex">
