--- a/parceiros.html
+++ b/parceiros.html
@@ -125,8 +125,8 @@
         <div class="col-md-6">
           <h5 class="footer-title">SOBRE A DREAM TRIP PROJECT</h5>
           <ul class="list-unstyled">
-            <li><a href="#">Hotéis parceiros</a></li>
-            <li><a href="#">Companhias Aéreas parceiras</a></li>
+            <li><a href="parceiros.html">Hotéis parceiros</a></li>
+            <li><a href="parceiros.html">Companhias Aéreas parceiras</a></li>
             <li><a href="#">Opiniões</a></li>
             <li><a href="#">Contate-nos</a></li>
             <li><a href="#">Ajuda (FAQs)</a></li>
