--- a/amesterdao.html
+++ b/amesterdao.html
@@ -10,6 +10,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="cidades.css">
+  <link rel="stylesheet" href="modal_style.css">
 </head>
 <body>
   <nav class="navbar navbar-expand-md bg-body-tertiary fixed-top box-shadow">
@@ -30,16 +31,62 @@
         </div>
         <div class="nav-underline mx-3 collapse navbar-collapse" id="navbarTogglerDemo01"><a class="nav-link nav link-secondary" href="parceiros.html">Parceiros</a></div>
         <div class="nav-underline collapse navbar-collapse" id="navbarTogglerDemo01"><a class="nav-link nav link-secondary" href="ajuda.html">Ajuda (FAQs)</a></div>
-        <div class="nav-underline mx-3 collapse navbar-collapse" id="navbarTogglerDemo01"><a class="nav-link nav link-secondary" href="contactos.html">Contate-nos</a></div>
-        <div class="d-flex">
-          <form class="d-flex d-none d-md-flex" role="search">
+        <!--MODAL POPUP-->               
+      <!--MODAL START BUTTON-->
+      <form>
+        <div type="button" id="modalToggler" class="nav-underline mx-3 collapse navbar-collapse" data-bs-toggle="modal" data-bs-target="#exampleModal">
+        <a class="nav-link nav link-secondary">Contacte-nos</a>
+      </div>
+      </form>
+
+    <!--SEARCHBAR-->
+      <div class="d-flex">
+        <form class="d-flex d-none d-md-flex" role="search">
           <input class="form-control me-2" type="search" placeholder="Buscar na página" aria-label="Search">
           <button class="btn btn-outline-success me-3 btn-cards" type="submit">Buscar</button>
+        </form>
+      </div>
+    </div>
+  </div>
+</nav>
+
+    <!--MODAL POPUP BODY--> 
+  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content"> 
+        <div class="modal-header">
+          <button type="button" id="button-close" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <h2 class="modal-title w-100 text-center display-4 title-c2 d-block" id="exampleModalLabel">Entre em contacto connosco!</h2>
+          <p class="text-center">Por favor, preencha o formulário abaixo para que lhe possamos ajudar.</p>
+          <form>
+            <div class="mb-3">
+              <label for="modal-firstname" class="col-form-label" required>Primeiro Nome:</label>
+              <input type="text" class="form-control" id="modal-firstname" required>
+            </div>
+            <div class="mb-3">
+              <label for="modal-lastname" class="col-form-label" required>Último Nome:</label>
+              <input type="text" class="form-control" id="modal-lastname" required>
+            </div>
+            <div class="mb-3">
+              <label for="modal-email" class="col-form-label" required>Email:</label>
+              <input type="email" class="form-control" id="modal-email" required>
+            </div>
+            <div class="mb-3">
+              <label for="modal-message" class="col-form-label" aria-placeholder="Escreva qual o seu problema ou sugestão">Mensagem:</label>
+              <textarea class="form-control" id="modal-message"></textarea>
+            </div>
+            <div class="modal-footer"> 
+              <button type="submit" id="btn-submit" class="btn btn-primary btn-lg btn-block">Submit</button>
+            </div>
           </form>
         </div>
       </div>
     </div>
-  </nav>
+  </div>
+  <!--MODAL POPUP END-->     
+        
   <section class="container-fluid bg-light d-flex flex-column align-items-center">
     <div class="container p-0 m-0 text-center pb-5">
       <h2 class="display-4 title-c2 text-center font-title p-4">Amesterdão</h2>
@@ -178,7 +225,7 @@
             <li><a href="parceiros.html">Companhias Aéreas parceiras</a></li>
 
             <li><a href="#">Opiniões</a></li>
-            <li><a href="#">Contate-nos</a></li>
+            <li><a id="modalHijack" href="#">Contate-nos</a></li>
             <li><a href="ajuda.html">Ajuda (FAQs)</a></li>
             <li><a href="termosCondicoes.html">Termos e condições</a></li>
             <li><a href="politicaPrivacidade.html">Política de Privacidade</a></li>
@@ -196,6 +243,8 @@
       </div>
     </div>
   </footer>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script> 
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="js-scripts.js"></script>
 </body>
 </html>
