--- a/parceiros.html
+++ b/parceiros.html
@@ -7,6 +7,11 @@
   <title>Parceiros</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Anton&family=DM+Serif+Text:ital@0;1&family=Great+Vibes&family=IBM+Plex+Mono:wght@400;600&family=Lora:ital,wght@0,400..700;1,400..700&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Oswald:wght@200..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="cidades.css">
+  <link rel="stylesheet" href="modal_style.css">
 </head>
 
 <body>
@@ -32,17 +37,62 @@
             class="nav-link nav link-secondary" href="parceiros.html">Parceiros</a></div>
         <div class="nav-underline collapse navbar-collapse" id="navbarTogglerDemo01"><a
             class="nav-link nav link-secondary" href="ajuda.html">Ajuda (FAQs)</a></div>
-        <div class="nav-underline mx-3 collapse navbar-collapse" id="navbarTogglerDemo01"><a
-            class="nav-link nav link-secondary" href="contactos.html">Contate-nos</a></div>
-        <div class="d-flex">
-          <form class="d-flex d-none d-md-flex" role="search">
-            <input class="form-control me-2" type="search" placeholder="Buscar na página" aria-label="Search">
-            <button class="btn btn-outline-success me-3 btn-cards" type="submit">Buscar</button>
+    <!--MODAL POPUP-->               
+    <!--MODAL START BUTTON-->
+      <form>
+        <div type="button" id="modalToggler" class="nav-underline mx-3 collapse navbar-collapse" data-bs-toggle="modal" data-bs-target="#exampleModal">
+        <a class="nav-link nav link-secondary">Contacte-nos</a>
+      </div>
+      </form>
+
+    <!--SEARCHBAR-->
+      <div class="d-flex">
+        <form class="d-flex d-none d-md-flex" role="search">
+          <input class="form-control me-2" type="search" placeholder="Buscar na página" aria-label="Search">
+          <button class="btn btn-outline-success me-3 btn-cards" type="submit">Buscar</button>
+        </form>
+      </div>
+    </div>
+  </div>
+</nav>
+
+    <!--MODAL POPUP BODY--> 
+  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content"> 
+        <div class="modal-header">
+          <button type="button" id="button-close" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <h2 class="modal-title w-100 text-center display-4 title-c2 d-block" id="exampleModalLabel">Entre em contacto connosco!</h2>
+          <p class="text-center">Por favor, preencha o formulário abaixo para que lhe possamos ajudar.</p>
+          <form>
+            <div class="mb-3">
+              <label for="modal-firstname" class="col-form-label" required>Primeiro Nome:</label>
+              <input type="text" class="form-control" id="modal-firstname" required>
+            </div>
+            <div class="mb-3">
+              <label for="modal-lastname" class="col-form-label" required>Último Nome:</label>
+              <input type="text" class="form-control" id="modal-lastname" required>
+            </div>
+            <div class="mb-3">
+              <label for="modal-email" class="col-form-label" required>Email:</label>
+              <input type="email" class="form-control" id="modal-email" required>
+            </div>
+            <div class="mb-3">
+              <label for="modal-message" class="col-form-label" aria-placeholder="Escreva qual o seu problema ou sugestão">Mensagem:</label>
+              <textarea class="form-control" id="modal-message"></textarea>
+            </div>
+            <div class="modal-footer"> 
+              <button type="submit" id="btn-submit" class="btn btn-primary btn-lg btn-block">Submit</button>
+            </div>
           </form>
         </div>
       </div>
     </div>
-  </nav>
+  </div>
+  <!--MODAL POPUP END-->         
+
   <div class="row row-cols-1 row-cols-md-3 g-4" style="margin: 2rem;">
     <div class="col">
       <div class="card">
@@ -128,10 +178,10 @@
             <li><a href="parceiros.html">Hotéis parceiros</a></li>
             <li><a href="parceiros.html">Companhias Aéreas parceiras</a></li>
             <li><a href="#">Opiniões</a></li>
-            <li><a href="#">Contate-nos</a></li>
-            <li><a href="#">Ajuda (FAQs)</a></li>
-            <li><a href="#">Termos e condições</a></li>
-            <li><a href="#">Política de Privacidade</a></li>
+            <li><a id="modalHijack" href="#">Contate-nos</a></li>
+            <li><a href="ajuda.html">Ajuda (FAQs)</a></li>
+            <li><a href="termosCondicoes.html">Termos e condições</a></li>
+            <li><a href="politicaPrivacidade.html">Política de Privacidade</a></li>
           </ul>
         </div>
       </div>
@@ -146,6 +196,8 @@
       </div>
     </div>
   </footer>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="js-scripts.js"></script> 
 </body>
 </html>
