--- a/parceiros.html
+++ b/parceiros.html
@@ -92,7 +92,9 @@
     </div>
   </div>
   <!--MODAL POPUP END-->         
-
+  <div class="text-center pt-4">
+    <h2 class="display-4 title-c2 d-block">Nossos parceiros</h2>
+  </div>
   <div class="row row-cols-1 row-cols-md-3 g-4" style="margin: 2rem;">
     <div class="col">
       <div class="card">
@@ -101,7 +103,7 @@
         <div class="card-body">
           <h5 class="card-title"> <strong>Hotel Wyndham</strong></h5>
           <p class="card-text">O Hotel Wyndham é uma rede internacional que oferece hospedagem moderna e confortável, com comodidades de alto padrão para viajantes de lazer e negócios.</p>
-          <a href="https://www.wyndhamhotels.com/" class="btn btn-primary btn-custom" target="_blank">Reservar quarto</a>
+          <a href="https://www.wyndhamhotels.com/" class="btn btn-primary btn-custom" target="_blank">Mais informações</a>
         </div>
       </div>
     </div>
@@ -112,7 +114,7 @@
         <div class="card-body">
           <h5 class="card-title"> <strong>Jinjiang International</strong></h5>
           <p class="card-text">A Jinjiang International é uma grande rede chinesa de hotéis, com opções que variam do luxo ao econômico. Atendendo tanto a viajantes de negócios quanto de lazer.</p>
-          <a href="https://www.jinjiang.com/hq/en/" class="btn btn-primary btn-custom" target="_blank">Reservar quarto</a>
+          <a href="https://www.jinjiang.com/hq/en/" class="btn btn-primary btn-custom" target="_blank">Mais informações</a>
         </div>
       </div>
     </div>
@@ -123,10 +125,11 @@
         <div class="card-body">
           <h5 class="card-title"> <strong>Marriott International</strong></h5>
           <p class="card-text">A Marriott International é uma rede global de hotéis de alto padrão, conhecida pela hospitalidade e por suas variadas marcas para diferentes perfis de hóspedes.</p>
-          <a href="https://www.marriott.com/marriott/aboutmarriott.mi" class="btn btn-primary btn-custom" target="_blank">Reservar quarto</a>
+          <a href="https://www.marriott.com/marriott/aboutmarriott.mi" class="btn btn-primary btn-custom" target="_blank">Mais informações</a>
         </div>
       </div>
     </div>
+    
     <div class="col">
       <div class="card">
         <img src="https://media.cntraveler.com/photos/647a44e1add73e0d14b175d8/16:9/w_2560%2Cc_limit/Emirates%2520Lounge%2520Reviewa_380-blue-sky-hires-lres-2-161364.jpg" class="card-img-top"
@@ -134,7 +137,7 @@
         <div class="card-body">
           <h5 class="card-title"> <strong>Emirates</strong></h5>
           <p class="card-text">A Emirates é uma renomada companhia aérea dos Emirados Árabes Unidos, famosa pelo serviço de luxo e uma vasta rede de destinos internacionais.</p>
-          <a href="https://www.emirates.com/pt/english/" class="btn btn-primary btn-custom" target="_blank">Reservar voo</a>
+          <a href="https://www.emirates.com/pt/english/" class="btn btn-primary btn-custom" target="_blank">Mais informações</a>
         </div>
       </div>
     </div>
@@ -145,7 +148,7 @@
         <div class="card-body">
           <h5 class="card-title"> <strong>TAP Air</strong></h5>
           <p class="card-text">A TAP Air Portugal é a companhia aérea nacional de Portugal, conhecida por oferecer voos para destinos na Europa, América do Sul.</p>
-          <a href="https://www.flytap.com/pt-pt/" class="btn btn-primary btn-custom" target="_blank">Reservar voo</a>
+          <a href="https://www.flytap.com/pt-pt/" class="btn btn-primary btn-custom" target="_blank">Mais informações</a>
         </div>
       </div>
     </div>
@@ -156,7 +159,7 @@
         <div class="card-body">
           <h5 class="card-title"> <strong>Air Arabia</strong></h5>
           <p class="card-text">A Air Arabia é uma companhia aérea dos Emirados Árabes Unidos, conhecida por oferecer tarifas acessíveis.</p>
-          <a href="https://www.airarabia.com/en" class="btn btn-primary btn-custom" target="_blank">Reservar voo</a>
+          <a href="https://www.airarabia.com/en" class="btn btn-primary btn-custom" target="_blank">Mais informações</a>
         </div>
       </div>
     </div>
