--- a/ajuda.html
+++ b/ajuda.html
@@ -272,7 +272,7 @@
             <li><a href="parceiros.html">Hotéis parceiros</a></li>
             <li><a href="parceiros.html">Companhias Aéreas parceiras</a></li>
 
-            <li><a href="#">Opiniões</a></li>
+            <li><a href="opinioes.html">Opiniões</a></li>
             <li><a id="modalHijack" href="#">Contate-nos</a></li>
             <li><a href="ajuda.html">Ajuda (FAQs)</a></li>
             <li><a href="termosCondicoes.html">Termos e condições</a></li>
