--- a/parceiros.html
+++ b/parceiros.html
@@ -93,7 +93,7 @@
   </div>
   <!--MODAL POPUP END-->         
   <div class="text-center pt-4">
-    <h2 class="display-4 title-c2 d-block">Nossos parceiros</h2>
+    <h2 class="display-4 title-c2 text-center font-title p-4">Nossos parceiros</h2>
   </div>
   <div class="row row-cols-1 row-cols-md-3 g-4" style="margin: 2rem;">
     <div class="col">
@@ -170,8 +170,8 @@
         <div class="col-md-6">
           <h5 class="footer-title">SIGA-NOS EM</h5>
           <div class="social-icons">
-            <a href="#"><i class="fab fa-instagram"> <img class="icon-footer" src="img/facebook.png" alt="icone facebook"></i></a>
-            <a href="#"><i class="fab fa-instagram"> <img class="icon-footer" src="img/instagram.png" alt="icone instagram"></i></a>
+            <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-instagram"> <img class="icon-footer" src="img/facebook.png" alt="icone facebook"></i></a>
+            <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"> <img class="icon-footer" src="img/instagram.png" alt="icone instagram"></i></a>
           </div>
         </div>
 
@@ -180,7 +180,7 @@
           <ul class="list-unstyled">
             <li><a href="parceiros.html">Hotéis parceiros</a></li>
             <li><a href="parceiros.html">Companhias Aéreas parceiras</a></li>
-            <li><a href="#">Opiniões</a></li>
+            <li><a href="opinioes.html">Opiniões</a></li>
             <li><a id="modalHijack" href="#">Contate-nos</a></li>
             <li><a href="ajuda.html">Ajuda (FAQs)</a></li>
             <li><a href="termosCondicoes.html">Termos e condições</a></li>
