--- a/politicaPrivacidade.html
+++ b/politicaPrivacidade.html
@@ -232,7 +232,7 @@
           <ul class="list-unstyled">
             <li><a href="parceiros.html">Hotéis parceiros</a></li>
             <li><a href="parceiros.html">Companhias Aéreas parceiras</a></li>
-            <li><a href="#">Opiniões</a></li>
+            <li><a href="opinioes.html">Opiniões</a></li>
             <li><a id="modalHijack" href="#">Contate-nos</a></li>
             <li><a href="ajuda.html">Ajuda (FAQs)</a></li>
             <li><a href="termosCondicoes.html">Termos e condições</a></li>
