--- a/parceiros.html
+++ b/parceiros.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="modal_style.css">
 </head>
 
-<body>
+<body class="bg-light">
   <nav class="navbar navbar-expand-md bg-body-tertiary fixed-top box-shadow">
     <div class="container-fluid">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01"
@@ -93,7 +93,7 @@
   </div>
   <!--MODAL POPUP END-->         
   <div class="text-center pt-4">
-    <h2 class="display-4 title-c2 text-center font-title p-4">Nossos parceiros</h2>
+    <h2 class="display-4 title-c2 text-center font-title">Nossos parceiros</h2>
   </div>
   <div class="row row-cols-1 row-cols-md-3 g-4" style="margin: 2rem;">
     <div class="col">
